--- a/blog/01.md
+++ b/blog/01.md
@@ -104,7 +104,7 @@ http://commons.apache.org/proper/commons-logging/download_logging.cgi
 
 ### 5.2 创建使用的JaveBean User
 
-```
+```java
 package com.qwm.spring1.bean;
 
 import java.io.Serializable;
@@ -150,7 +150,7 @@ public class User implements Serializable{
 
 配置上面创建的 User 类。
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
 
@@ -172,7 +172,7 @@ public class User implements Serializable{
 
 ### 5.4 示例代码
 
-```
+```java
 package com.qwm.spring1.a_hello;
 
 import com.qwm.spring1.bean.User;
