--- a/blog/02.md
+++ b/blog/02.md
@@ -6,7 +6,7 @@
 
 将对象交给spring容器管理的时候，我们需要使用 <bean> 来配置。最基础配置如下
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
     <!-- 将User对象交给spring容器管理 -->
@@ -44,7 +44,7 @@ scope属性有四个可选值，如下：
 
 ### 3.1 User.java
 
-```
+```java
 package com.qwm.spring1.bean;
 import java.io.Serializable;
 /**
@@ -83,7 +83,7 @@ public class User implements Serializable{
 
 ### 3.2 测试代码
 
-```
+```java
 @Test
 public void test1(){
     //1.创建容器对象
@@ -107,7 +107,7 @@ public void test1(){
 #### 3.3.1 applicationContext.xml
 这里我们可以使用默认，也可以自己设置。
 可以是这样
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
     <!--scope 可以选择 singleton(单例) 、prototype(多例)-->
@@ -115,7 +115,7 @@ public void test1(){
 </beans>
 ```
 也可以是这样
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
     <!--scope 可以选择 singleton(单例) 、prototype(多例)-->
@@ -138,7 +138,7 @@ com.qwm.spring1.bean.User@3f49dace
 
 #### 3.4.1 applicationContext.xml
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
     <!--scope 可以选择 singleton(单例) 、prototype(多例)-->
@@ -172,7 +172,7 @@ com.qwm.spring1.bean.User@1d16f93d
 
 ### 4.2 applicationContext.xml
 
-```
+```xml
 <?xml version="1.0" encoding="UTF-8" ?>
 <beans xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.springframework.org/schema/beans" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-4.2.xsd ">
 
@@ -193,7 +193,7 @@ com.qwm.spring1.bean.User@1d16f93d
 
 ### 4.3 代码示例
 
-```
+```java
 /**
  * init 和 destory方法测试
  */
