[SSH与SSM学习之Spring06——Spring属性注入之p名称空间注入]

--- a/blog/05.md
+++ b/blog/05.md
@@ -8,7 +8,7 @@
 
 如下面的一配置文件
 
-```
+```xml
 <!--这里会调用  User(int name, int age)-->
 <bean name="user4" class="com.qwm.spring1.bean.User">
     <constructor-arg name="name" value="2014" type="int" index="0"/>
@@ -61,7 +61,7 @@ public class Car {
 
 ## 三、User类
 
-```
+```java
 package com.qwm.spring1.bean;
 
 import java.io.Serializable;
@@ -346,3 +346,8 @@ public void test5(){
 User{name='xiaoming', age=18, car=Car{color='红色', name='兰博基尼'}}
 ```
 
+----
+
+## 八、源码下载
+
+https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring1/c_inject
