--- a/blog/07.md
+++ b/blog/07.md
@@ -1,41 +1,34 @@
 [TOC]
 
-# SSH与SSM学习之Spring06——Spring属性注入之p名称空间注入
+# SSH与SSM学习之Spring07——Spring属性注入之spel注入
 
-## 一、p名称空间注入说明
+## 一、spel注入
 
-这种方式的注入，就是在配置类的时候，配置上属性的值。其实调用的是属性的set方法
+spel注入: spring Expression Language 。sping表达式语言
 
- - 值类型: p:属性名="值"
- 
- - 对象类型: p:属性名-ref="bean名称"
+其实就是使用 
 
-当然得导入命名空间。
-
-使用步骤如下：
-
-1. 导入命名空间
-  ```xml
-  xmlns:p="http://www.springframework.org/schema/p"
-  ```
-
-2. 使用p:属性完成注入
-
- - 值类型: p:属性名="值"
- 
- - 对象类型: p:属性名-ref="bean名称"
- 
- 例如
 ```xml
-<bean name="user6" class="com.qwm.spring1.bean.User" p:age="20" p:name="wenming" p:car-ref="car"/>
+#{变量}
 ```
 
+这种来个属性赋值。
+
+例如
+
+```xml
+<bean name="user7" class="com.qwm.spring1.bean.User">
+    <property name="name" value="#{user2.name}"/>
+    <property name="age" value="#{user2.age}"/>
+    <property name="car" ref="car"/>
+</bean>
+```
+
+下面我们来测试
+
+使用到了 User 和Car 类。
+
 ---
-
-下面我们开始测试，我们使用到了 User 和 Car 类
-
----
-
 
 ## 二、Car类
 
@@ -145,15 +138,26 @@ public class User implements Serializable {
         <property name="color" value="红色"/>
     </bean>
 
-    <!--=============p名称空间注入测试============-->
+    <!--=============构造方法注入测试============-->
+    <!--constructor-arg 使用构造函数的时候，是用来给参数赋值-->
+    <!-- name属性: 构造函数的参数名 -->
+    <!-- index属性: 构造函数的参数索引 -->
+    <!-- type属性: 构造函数的参数类型-->
+    <!--User(int age, String name)-->
+    <bean name="user2" class="com.qwm.spring1.bean.User">
+       <constructor-arg name="name" value="qiwenming"/>
+       <constructor-arg name="age" value="18"/>
+       <property name="car" ref="car"/>
+    </bean>
 
-    <!-- p名称空间注入, 走set方法
-        1.导入P名称空间  xmlns:p="http://www.springframework.org/schema/p"
-        2.使用p:属性完成注入
-            |-值类型: p:属性名="值"
-            |-对象类型: p:属性名-ref="bean名称"
-     -->
-    <bean name="user6" class="com.qwm.spring1.bean.User" p:age="20" p:name="wenming" p:car-ref="car"/>
+
+    <!--=============spel注入============-->
+   <!-- spel注入: spring Expression Language sping表达式语言-->
+    <bean name="user7" class="com.qwm.spring1.bean.User">
+        <property name="name" value="#{user2.name}"/>
+        <property name="age" value="#{user2.age}"/>
+        <property name="car" ref="car"/>
+    </bean>
 </beans>
 ```
 
@@ -162,13 +166,10 @@ public class User implements Serializable {
 ## 五、测试代码
 
 ```java
-/**
- * p名称空间注入测试
- */
 @Test
-public void test6(){
+public void test7(){
     ApplicationContext ac = new ClassPathXmlApplicationContext("com/qwm/spring1/c_inject/applicationContext.xml");
-    User user = (User) ac.getBean("user6");
+    User user = (User) ac.getBean("user7");
     System.out.println(user);
 }
 ```
@@ -178,8 +179,9 @@ public void test6(){
 ## 六、运行结果
 
 ```
+构造方法: User(int age, String name)
 User实例化了----User{name='null', age=0, car=null}
-User{name='wenming', age=20, car=Car{color='红色', name='兰博基尼'}}
+User{name='qiwenming', age=18, car=Car{color='红色', name='兰博基尼'}}
 ```
 
 ---
