[SSH与SSM学习之Spring11——Spring中的AOP]

--- a/blog/09.md
+++ b/blog/09.md
@@ -54,9 +54,11 @@ public class User {
 
 ## 三、修改对象的作用范围
  可以使用的注解是
- ```java
+
+```java
 @Scope
-```
+``` 
+
 例如
 
 ```java
@@ -168,7 +170,7 @@ public void destory(){
 
 ---
 
-### 七、测试小例子
+## 七、测试小例子
 
 ###  7.1 Car 汽车类
 
@@ -333,6 +335,27 @@ public class User {
 ### 7.4 测试代码
 
 ```java
+package com.qwm.spring2.a_annotation;
+
+import com.qwm.spring2.bean.User;
+import org.junit.Test;
+import org.springframework.context.support.ClassPathXmlApplicationContext;
+
+/**
+ * @author：qiwenming
+ * @date：2017/10/12 0012   23:39
+ * @description：注解 测试
+ */
+public class Demo {
+
+    @Test
+    public void test1(){
+        ClassPathXmlApplicationContext ac = new ClassPathXmlApplicationContext("com/qwm/spring2/applicationContext.xml");
+        User user = (User) ac.getBean("user");
+        System.out.println(user);
+        ac.close();
+    }
+}
 
 ```
 
@@ -350,4 +373,4 @@ User{name='wiming', age=18, car=Car{name='玛莎拉蒂', color='绿色'}}
 
 ## 八、源码下载
 
-https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2
+[https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2](https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2)
