[SSH与SSM学习之Spring13——动态代理之通知的使用]

--- a/blog/12.md
+++ b/blog/12.md
@@ -271,3 +271,9 @@ remove : 方法调用之前----
 remove : 方法掉用之后
 ----------------------------
 ```
+
+---
+
+## 六、源码下载
+
+[https://github.com/wimingxxx/spring01/blob/master/src/com/qwm/spring2/c_proxy/Demo.java](https://github.com/wimingxxx/spring01/blob/master/src/com/qwm/spring2/c_proxy/Demo.java)
