--- a/blog/17.md
+++ b/blog/17.md
@@ -1,98 +1,81 @@
 [TOC]
 
-# SSH与SSM学习之Spring16——Spring中AOP之使用配置文件配置
+# SSH与SSM学习之Spring17——Spring中AOP之使用注解配置
 
 ## 一、说明
 
-Spring中使用AOP主要就是配置目标类，通知类，和织入。代理类如何创建之类的不用我们关心，因为Spring已经弄好了。
+前面我们使用配置文件操作AOP,下面我们使用注解方式操作AOP。
 
-下面我们来看一下我们搞一把。
+目标对象还是使用之前的目标对象。
 
----
+--------------------------------
 
-## 二、导包
+## 二、MyAdvice 通知
+配置通知的使用，我们使用到了如下的注解。
+```java
+//类上使用这个注解 表示通知类
+@Aspect
 
-除了之前使用的包外，下载还需要导入一下包。
+//切点配置
+@Pointcut
 
-1. 导入 Spring 的aop包
-```xml
-spring-aop-4.3.9.RELEASE.jar
-spring-aspects-4.3.9.RELEASE.jar
+//前置通知
+@Before
+
+//后置通知
+@AfterReturning
+
+//环绕通知
+@Around
+
+//异常通知
+@AfterThrowing
+
+//后置通知
+@After
 ```
 
-2. 导入 Spring 需要的第三方 aop 包
+如下说明的 **@Pointcut** 注解，使用这个注解，在通知方法中配置的时候，可以简化表达式。
 
-```xml
-com.springsource.org.aopalliance-1.0.0.jar
-com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar
+如下，不使用 **@Pointcut** 注解的情况
+```java
+@Aspect
+//表示通知类
+public class MyAdvice {
+    //前置通知
+    //指定该方法是前置通知,并制定切入点
+    @Before(""execution(* com.qwm.spring2.service.*ServiceImpl.*(..))"")
+    public void before(){
+        System.out.println("这是前置通知!!");
+    }
+ }
 ```
 
----
+如下，使用 **@Pointcut** 注解的情况
+```java
+@Aspect
+//表示通知类
+public class MyAdvice {
+    //这里创建这个切点，下面的配置可以之前使用 "MyAdvice.pc()" 就行了，不用写 那么长的一串
+    @Pointcut("execution(* com.qwm.spring2.service.*ServiceImpl.*(..))")
+    public void pc(){}
 
-## 三、创建目标类
+    //前置通知
+    //指定该方法是前置通知,并制定切入点
+    @Before("MyAdvice.pc()")
+    public void before(){
+        System.out.println("这是前置通知!!");
+    }
+ }
+```
 
-这个目标类我们创建了一个接口和一个实现类。
-
-### 3.1 UserService 接口
+MyAdvice通知类
 
 ```java
-package com.qwm.spring2.service;
-/**
- * @author：qiwenming
- * @date：2017/10/25 0025   23:08
- * @description：
- */
-public interface UserService {
-    void saveUser();
-    void deleteUser();
-    void updateUser();
-    void findUser();
-}
-```
-
-### 3.2 UserServiceImpl 目标类
-
-```java
-package com.qwm.spring2.service;
-
-/**
- * @author：qiwenming
- * @date：2017/10/25 0025   23:07
- * @description：
- */
-public class UserServiceImpl implements UserService {
-    @Override
-    public void saveUser() {
-        System.out.println("--保存用户--");
-    }
-
-    @Override
-    public void deleteUser() {
-        System.out.println("--删除用户--");
-        //为了测试异常通知，弄出一异常
-        int i = 1 / 0;
-    }
-
-    @Override
-    public void updateUser() {
-        System.out.println("--更新用户--");
-    }
-
-    @Override
-    public void findUser() {
-        System.out.println("--查找用户--");
-    }
-}
-```
-
----
-
-## 四、MyAdvice 通知类
-
-```java
-package com.qwm.spring2.f_aopxml;
+package com.qwm.spring2.g_aopannotation;
 
 import org.aspectj.lang.ProceedingJoinPoint;
+import org.aspectj.lang.annotation.*;
 
 /**
  * @author：qiwenming
@@ -100,20 +83,28 @@ import org.aspectj.lang.ProceedingJoinPoint;
  * @description：
  *  通知类
  */
+@Aspect
+//表示通知类
 public class MyAdvice {
+    //这里创建这个切点，下面的配置可以之前使用 "MyAdvice.pc()" 就行了，不用写 那么长的一串
+    @Pointcut("execution(* com.qwm.spring2.service.*ServiceImpl.*(..))")
+    public void pc(){}
 
     //前置通知
     //指定该方法是前置通知,并制定切入点
+    @Before("MyAdvice.pc()")
     public void before(){
         System.out.println("这是前置通知!!");
     }
 
     //后置通知
+    @AfterReturning("MyAdvice.pc()")
     public void afterReturning(){
         System.out.println("这是后置通知(如果出现异常不会调用)!!");
     }
 
     //环绕通知
+    @Around("MyAdvice.pc()")
     public Object around(ProceedingJoinPoint pjp) throws Throwable {
         System.out.println("这是环绕通知之前的部分!!");
         Object proceed = pjp.proceed();//调用目标方法
@@ -122,20 +113,23 @@ public class MyAdvice {
     }
 
     //异常通知
+    @AfterThrowing("MyAdvice.pc()")
     public void afterException(){
         System.out.println("出事啦!出现异常了!!");
     }
 
     //后置通知
+    @After("MyAdvice.pc()")
     public void after(){
         System.out.println("这是后置通知(出现异常也会调用)!!");
     }
 }
+
 ```
 
 ---
 
-## 五、applicationContext.xml 配置文件
+## 三、applicationContext.xml 配置文件
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -148,59 +142,27 @@ public class MyAdvice {
     <bean name="userService" class="com.qwm.spring2.service.UserServiceImpl"/>
 
     <!--2.配置通知-->
-    <bean name="myAdvice" class="com.qwm.spring2.f_aopxml.MyAdvice"/>
+    <bean name="myAdvice" class="com.qwm.spring2.g_aopannotation.MyAdvice"/>
 
-    <!--3.织入-->
-    <aop:config>
-        <!--切入点-->
-        <!--切入点配置说明
-
-           切入点配置需要使用 execution()
-
-                  下面这个是配置 UserServiceImpl的saveUser方法
-           public void com.qwm.spring2.service.UserServiceImpl.saveUser()
-                  public可以省略
-           void com.qwm.spring2.service.UserServiceImpl.saveUser()
-                  可以使用 * 表示指定返回值
-           * com.qwm.spring2.service.UserServiceImpl.saveUser()
-                  可以使用 * 表示配置所有方法
-           * com.qwm.spring2.service.UserServiceImpl.*()
-
-                 可以使用 * 表示匹配指定的类 （只会匹配 service包下的类）
-            * com.qwm.spring2.service.*ServiceImpl.*()
-                 可以使用 .. 表示匹配子包已经子子包（会匹配 service包下以及所有子包的类）
-            * com.qwm.spring2.service..*ServiceImpl.*()
-        -->
-        <aop:pointcut id="pc" expression="execution(* com.qwm.spring2.service.*ServiceImpl.*())"/>
-        <!--织入通知-->
-        <aop:aspect ref="myAdvice">
-            <!--前置通知-->
-            <aop:before method="before" pointcut-ref="pc"/>
-            <!--后置通知-->
-            <aop:after-returning method="afterReturning" pointcut-ref="pc"/>
-            <!--环绕通知-->
-            <aop:around method="around" pointcut-ref="pc"/>
-            <!--异常拦截通知-->
-            <aop:after-throwing method="afterException" pointcut-ref="pc"/>
-            <!--后置通知-->
-            <aop:after method="after" pointcut-ref="pc"/>
-        </aop:aspect>
-    </aop:config>
+    <!--3.开启使用注解完成织入-->
+    <aop:aspectj-autoproxy></aop:aspectj-autoproxy>
 
 </beans>
 ```
 
 ---
 
-## 六、AopXmlTest 测试
+## 四、AopAnnotationTest 测试
+
 ```java
-package com.qwm.spring2.f_aopxml;
+package com.qwm.spring2.g_aopannotation;
 
 import com.qwm.spring2.service.UserService;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+
 import javax.annotation.Resource;
 
 /**
@@ -212,8 +174,8 @@ import javax.annotation.Resource;
 //帮我们创建容器
 @RunWith(SpringJUnit4ClassRunner.class)
 //指定创建容器时使用哪个配置文件
-@ContextConfiguration("classpath:com/qwm/spring2/f_aopxml/applicationContext.xml")
-public class AopXmlTest {
+@ContextConfiguration("classpath:com/qwm/spring2/g_aopannotation/applicationContext.xml")
+public class AopAnnotationTest {
 
     @Resource(name = "userService")
     public UserService us;
@@ -228,23 +190,24 @@ public class AopXmlTest {
         us.deleteUser();
     }
 }
-
 ```
 
-测试test1的结果是
+test测试结果
+
 ```
-这是前置通知!!
 这是环绕通知之前的部分!!
+这是前置通知!!
 --保存用户--
-这是后置通知(出现异常也会调用)!!
 这是环绕通知之后的部分!!
+这是后置通知(出现异常也会调用)!!
 这是后置通知(如果出现异常不会调用)!!
 ```
 
-测试test2的结果是
+test2测试结果
+
 ```java
-这是前置通知!!
 这是环绕通知之前的部分!!
+这是前置通知!!
 --删除用户--
 这是后置通知(出现异常也会调用)!!
 出事啦!出现异常了!!
@@ -259,12 +222,10 @@ java.lang.ArithmeticException: / by zero
 	at org.springframework.aop.support.AopUtils.invokeJoinpointUsingReflection(AopUtils.java:333)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.invokeJoinpoint(ReflectiveMethodInvocation.java:190)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:157)
-	at org.springframework.aop.aspectj.AspectJAfterAdvice.invoke(AspectJAfterAdvice.java:47)
-	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
-	at org.springframework.aop.aspectj.AspectJAfterThrowingAdvice.invoke(AspectJAfterThrowingAdvice.java:62)
+	at org.springframework.aop.framework.adapter.MethodBeforeAdviceInterceptor.invoke(MethodBeforeAdviceInterceptor.java:52)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
 	at org.springframework.aop.aspectj.MethodInvocationProceedingJoinPoint.proceed(MethodInvocationProceedingJoinPoint.java:85)
-	at com.qwm.spring2.f_aopxml.MyAdvice.around(MyAdvice.java:27)
+	at com.qwm.spring2.g_aopannotation.MyAdvice.around(MyAdvice.java:36)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -273,15 +234,17 @@ java.lang.ArithmeticException: / by zero
 	at org.springframework.aop.aspectj.AbstractAspectJAdvice.invokeAdviceMethod(AbstractAspectJAdvice.java:618)
 	at org.springframework.aop.aspectj.AspectJAroundAdvice.invoke(AspectJAroundAdvice.java:70)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
+	at org.springframework.aop.aspectj.AspectJAfterAdvice.invoke(AspectJAfterAdvice.java:47)
+	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
 	at org.springframework.aop.framework.adapter.AfterReturningAdviceInterceptor.invoke(AfterReturningAdviceInterceptor.java:52)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
-	at org.springframework.aop.framework.adapter.MethodBeforeAdviceInterceptor.invoke(MethodBeforeAdviceInterceptor.java:52)
+	at org.springframework.aop.aspectj.AspectJAfterThrowingAdvice.invoke(AspectJAfterThrowingAdvice.java:62)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
 	at org.springframework.aop.interceptor.ExposeInvocationInterceptor.invoke(ExposeInvocationInterceptor.java:92)
 	at org.springframework.aop.framework.ReflectiveMethodInvocation.proceed(ReflectiveMethodInvocation.java:179)
 	at org.springframework.aop.framework.JdkDynamicAopProxy.invoke(JdkDynamicAopProxy.java:213)
-	at com.sun.proxy.$Proxy13.deleteUser(Unknown Source)
-	at com.qwm.spring2.f_aopxml.AopXmlTest.test2(AopXmlTest.java:32)
+	at com.sun.proxy.$Proxy19.deleteUser(Unknown Source)
+	at com.qwm.spring2.g_aopannotation.AopAnnotationTest.test2(AopAnnotationTest.java:33)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -310,11 +273,11 @@ java.lang.ArithmeticException: / by zero
 	at com.intellij.rt.execution.junit.IdeaTestRunner$Repeater.startRunnerWithArgs(IdeaTestRunner.java:51)
 	at com.intellij.rt.execution.junit.JUnitStarter.prepareStreamsAndStart(JUnitStarter.java:242)
 	at com.intellij.rt.execution.junit.JUnitStarter.main(JUnitStarter.java:70)
-```
 
+```
 
 ---
 
-## 七、源码下载
+## 五、源码下载
 
-[https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2/f_aopxml](https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2/f_aopxml)
+[https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2/g_aopannotation](https://github.com/wimingxxx/spring01/tree/master/src/com/qwm/spring2/g_aopannotation)
